<resources>
    <string name="app_name">PiggyWallet</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="demo">Dummy String</string>
    <string name="bot_nav_home">Home</string>
    <string name="bot_nav_settings">Settings</string>
    <string name="wallet_detail_detail">Transaction histories</string>
    <string name="wallet_detail_overview_balance">Balance</string>
    <string name="wallet_detail_overview_inflow">Inflow</string>
    <string name="wallet_detail_overview_outflow">Outflow</string>
    <string name="card_overview_button">See Statistics</string>
    <string name="demo_number">92K</string>
    <string name="action_save">Save</string>
    <string name="amount">$ 0</string>
    <string name="add_note">Add Note</string>
    <string name="add_date">Today</string>
    <string name="choose_category">Choose Category</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="add_transaction_food"><![CDATA[Food&Drinks]]></string>
    <string name="add_transaction_choose_date_fail">Error choosing date</string>
    <string name="add_transaction_success">Transaction Added</string>
    <string name="add_transaction_missing_amount">Please fill in amount</string>
    <string name="add_transaction_missing_category">Please choose a category</string>
    <string name="no_transaction">There are no transactions</string>
    <string name="overview">Overview</string>
    <string name="wallet_title_hint">Wallet name...</string>
    <string name="wallet_balance_hint">Initial balance...</string>
    <string name="wallet_subtitle_hint">Wallet subtitle...</string>
    <string name="prompt_wallet_created">Wallet Created</string>
    <string name="save_wallet_to_prefs_error">Cannot save wallet to prefs</string>
    <string name="snack_bar_undo">Undo</string>
    <string name="snack_bar_text">1 Wallet deleted</string>
    <string name="add_wallet_missing_title">Wallet must have a name</string>
    <string name="invalid_input">Invalid Input :</string>
</resources>
