<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/materialCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_add_transaction_category"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_70"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_16"
            android:background="@android:color/transparent"
            android:focusable="false"
            android:text="@string/choose_category"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_add_transaction_amount" />

        <Button
            android:id="@+id/button_add_transaction_date"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_70"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_16"
            android:background="@android:color/transparent"
            android:focusable="false"
            android:text="@string/add_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_add_transaction_category" />

        <EditText
            android:id="@+id/edit_text_add_transaction_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_32"
            android:layout_marginEnd="@dimen/dp_16"
            android:hint="@string/amount"
            android:inputType="numberDecimal"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/image_add_transaction_amount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_add_transaction_amount"
            app:layout_constraintTop_toTopOf="@+id/image_add_transaction_amount" />

        <EditText
            android:id="@+id/edit_text_add_transaction_note"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_32"
            android:layout_marginEnd="@dimen/dp_16"
            android:hint="@string/add_note"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="@+id/image_add_transaction_note"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_add_transaction_note"
            app:layout_constraintTop_toTopOf="@+id/image_add_transaction_note" />


        <ImageView
            android:id="@+id/image_add_transaction_amount"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_16"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_money_black_24dp"
            app:layout_constraintStart_toStartOf="@+id/button_add_transaction_date"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_add_transaction_note"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginBottom="@dimen/dp_16"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_note_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/button_add_transaction_date"
            app:layout_constraintTop_toBottomOf="@+id/button_add_transaction_date" />

        <ImageView
            android:id="@+id/image_add_transaction_date"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:layout_marginStart="@dimen/dp_24"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_date_black_24dp"
            app:layout_constraintBottom_toBottomOf="@+id/button_add_transaction_date"
            app:layout_constraintStart_toStartOf="@+id/button_add_transaction_date"
            app:layout_constraintTop_toTopOf="@+id/button_add_transaction_date" />

        <ImageView
            android:id="@+id/image_add_transaction_date2"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:layout_marginStart="@dimen/dp_24"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_date_black_24dp"
            app:layout_constraintBottom_toBottomOf="@+id/button_add_transaction_category"
            app:layout_constraintStart_toStartOf="@+id/button_add_transaction_category"
            app:layout_constraintTop_toTopOf="@+id/button_add_transaction_category" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
