<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_110"
    app:cardCornerRadius="@dimen/dp_8"
    app:cardElevation="@dimen/dp_8">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_1"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_8"
            android:alpha="0.5"
            android:background="@android:color/black"
            app:layout_constraintBottom_toBottomOf="@+id/text_view_overview_title"
            app:layout_constraintEnd_toStartOf="@+id/text_view_overview_title"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toTopOf="@+id/text_view_overview_title" />

        <TextView
            android:id="@+id/text_view_overview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_8"
            android:text="@string/overview"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_1"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_16"
            android:alpha="0.5"
            android:background="@android:color/black"
            app:layout_constraintBottom_toBottomOf="@+id/text_view_overview_title"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toEndOf="@+id/text_view_overview_title"
            app:layout_constraintTop_toTopOf="@+id/text_view_overview_title" />

        <TextView
            android:id="@+id/text_view_overview_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_16"
            android:text="@string/wallet_detail_overview_balance"
            app:layout_constraintEnd_toStartOf="@+id/text_view_overview_inflow"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/text_view_overview_title" />

        <TextView
            android:id="@+id/text_view_overview_inflow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_16"
            android:text="@string/wallet_detail_overview_inflow"
            app:layout_constraintEnd_toStartOf="@+id/text_view_overview_outflow"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/text_view_overview_balance"
            app:layout_constraintTop_toBottomOf="@+id/text_view_overview_title" />

        <TextView
            android:id="@+id/text_view_overview_outflow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_16"
            android:text="@string/wallet_detail_overview_outflow"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/text_view_overview_inflow"
            app:layout_constraintTop_toBottomOf="@+id/text_view_overview_title" />

        <TextView
            android:id="@+id/text_view_overview_balance_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginBottom="@dimen/dp_8"
            android:text="@string/demo_number"
            android:textSize="@dimen/sp_32"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/text_view_overview_balance"
            app:layout_constraintStart_toStartOf="@+id/text_view_overview_balance"
            app:layout_constraintTop_toBottomOf="@+id/text_view_overview_balance" />

        <TextView
            android:id="@+id/text_view_overview_inflow_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginBottom="@dimen/dp_8"
            android:text="@string/demo_number"
            android:textColor="@color/color_positive_balance"
            android:textSize="@dimen/sp_32"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/text_view_overview_inflow"
            app:layout_constraintStart_toStartOf="@+id/text_view_overview_inflow"
            app:layout_constraintTop_toBottomOf="@+id/text_view_overview_inflow" />

        <TextView
            android:id="@+id/text_view_overview_outflow_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginBottom="@dimen/dp_8"
            android:text="@string/demo_number"
            android:textColor="@color/color_negative_balance"
            android:textSize="@dimen/sp_32"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/text_view_overview_outflow"
            app:layout_constraintStart_toStartOf="@+id/text_view_overview_outflow"
            app:layout_constraintTop_toBottomOf="@+id/text_view_overview_outflow" />

        <ImageButton
            android:id="@+id/button_overview_staticstic"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/color_primary_dark"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_navigate_next_white_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline_button"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.80" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.02" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.78" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
